add CNAME support

--- a/Hosts.Web/appsettings.json
+++ b/Hosts.Web/appsettings.json
@@ -8,5 +8,6 @@
     }
   },
   "HostsFilePath": "/usr/local/etc/hosts",
+  "CnameFilePath": "/etc/dnsmasq.d/cname",
   "ReloadCommand": [ "pkill", "-HUP", "dnsmasq" ]
 }
