--- a/hosts.web.service.in
+++ b/hosts.web.service.in
@@ -11,6 +11,7 @@ SyslogIdentifier=@ASSEMBLY_NAME@
 User=@USER@
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=ASPNETCORE_URLS=http://localhost:@PORT@
+Environment=DOTNET_BUNDLE_EXTRACT_BASE_DIR=/var/tmp/.net
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
 
 [Install]
