--- a/Hosts.Web/Hosts.Web.csproj
+++ b/Hosts.Web/Hosts.Web.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AnalysisMode>Recommended</AnalysisMode>
     <UserSecretsId>hosts.web</UserSecretsId>
     <AssemblyName>hosts.web</AssemblyName>
   </PropertyGroup>
